# nps_uw_multibeam_sonar

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: blueview_p900_local_raster.yaml  blueview_p900_local_ray.yaml  blueview_p900_shipwreck.yaml  blueview_p900_tank.yaml  blueview_p900_vase.yaml
include/nps_uw_multibeam_sonar/: gazebo_multibeam_sonar_raster_based.hh  gazebo_multibeam_sonar_ray_based.hh
launch/: local_search_blueview_p900_nps_multibeam_raster.launch.py  local_search_blueview_p900_nps_multibeam_ray.launch  local_search_blueview_p900_nps_multibeam_ray.launch.py  local_search_blueview_p900_nps_multibeam_urdf_standalone_raster.launch.py  local_search_blueview_p900_nps_multibeam_urdf_standalone_ray.launch.py  local_search_oculus_m1200d_nps_multibeam_raster.launch.py  local_search_oculus_m1200d_nps_multibeam_ray.launch.py  sonar_shipwreck_blueview_p900_nps_multibeam.launch.py  sonar_tank_blueview_m450_nps_multibeam.launch.py  sonar_tank_blueview_p900_nps_multibeam.launch.py  sonar_tank_blueview_p900_nps_multibeam_ray.launch  sonar_tank_blueview_p900_nps_multibeam_ray.launch.py  sonar_tank_blueview_p900_nps_multibeam_urdf.launch.py  sonar_tank_oculus_m1200d_nps_multibeam.launch  sonar_tank_oculus_m1200d_nps_multibeam.launch.py  sonar_tank_oculus_m1200d_nps_multibeam_customSDFTag.launch.py  sonar_tank_seabat_f50_nps_multibeam.launch.py  sonar_vase_blueview_p900_nps_multibeam.launch.py
models/blueview_p900_nps_multibeam_ray/: model.sdf
models/coke_can_rubber/: model.sdf
models/coke_can_steel/: model.sdf
models/oculus_m1200d_nps_multibeam/: model.sdf
models/oculus_m1200d_nps_multibeam_ray/: model.sdf
models/seabat_f50_nps_multibeam/: model.sdf
src/: Sonar_move.cpp  gazebo_multibeam_sonar_raster_based.cpp  gazebo_multibeam_sonar_ray_based.cpp  sonar_calculation_cuda.cu
test/: CMakeLists.txt  main.cpp  sonar_calculation_cuda.cu
urdf/: multibeam_sonar_blueview_p900.xacro
worlds/: local_search.world  local_search_blueview_p900_nps_multibeam_raster.world  local_search_blueview_p900_nps_multibeam_ray.world  local_search_oculus_m1200d_nps_multibeam_raster.world  local_search_oculus_m1200d_nps_multibeam_ray.world  local_search_vase_blueview_p900_nps_multibeam_ray.world  sonar_tank_oculus_m1200d_nps_multibeam.world
