<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nps_uw_multibeam_sonar</name>
  <version>0.0.0</version>
  <description>
    NPS Multibeam Sonar Plugin with NVIDIA Cuda library
  </description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <!-- <depend>uuv_sensor_ros_plugins</depend> -->
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- From https://github.com/apl-ocean-engineering/hydrographic_msgs -->
  <depend>acoustic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>xacro</depend>
  <depend>velodyne_gazebo_plugins</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
